Fix close menu on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,10 +62,8 @@
   }
 }
 
-@layer utilities {
-  .page-container {
-    @apply pt-20 px-4 lg:pt-24 lg:px-24;
-  }
+@utility page-container {
+  @apply py-20 px-4 lg:py-24 lg:px-24 max-w-[830px] m-auto;
 }
 
 body {
